qooauth/deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qooauth
  namespace: qoobot
  labels:
    app: qooauth
spec:
  type: ClusterIP
  selector:
    app: qooauth
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: grpc
    port: 9090
    targetPort: 9090
    protocol: TCP
