qooauth/deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qooauth
  namespace: qoobot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/rate-limit: "10r/s"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - auth.qoobot.com
    secretName: qooauth-tls
  rules:
  - host: auth.qoobot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qooauth
            port:
              number: 8080
